# promptframe

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  publish.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/: index.html
api/builder/: index.html
api/cli/: index.html
api/components/: index.html
api/exceptions/: index.html
api/fields/: index.html
api/llm_base_model/: index.html
api/models/: index.html
api/parsers/: index.html
api/registry/: index.html
api/skills/: index.html
builder/: index.html
docs/: builder.md  environments.md  getting-started.md  index.md  structured-output.md
docs/api/: builder.md  cli.md  components.md  exceptions.md  fields.md  index.md  llm_base_model.md  models.md  parsers.md  registry.md  skills.md
docs/guides/: builder.md  cli.md  prompt-management.md  skills.md  structured-output.md
environments/: index.html
example/: promptframe_examples.ipynb
example/prompts/common/: customer_prompts.yaml  summarise.yaml
example/prompts/prod/: summarise.yaml
getting-started/: index.html
guides/builder/: index.html
guides/cli/: index.html
guides/environments/: index.html
guides/prompt-management/: index.html
guides/skills/: index.html
guides/structured-output/: index.html
prompt-management/: index.html
search/: search_index.json
skills/: index.html
src/promptframe/: __init__.py  builder.py  cli.py  exceptions.py  fields.py  llm_base_model.py  models.py  parsers.py  registry.py  skill.py  skill_registry.py
structured-output/: index.html
(+6 files in other folders)
